[package]
name = "restspec-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"
tree-sitter = "~0.20.10"
tree-sitter-restspec = { path = "../restspec-language" }
